fix: Fix SharingBadge align on Photos

--- a/src/photos/styles/albumsList.styl
+++ b/src/photos/styles/albumsList.styl
@@ -76,7 +76,7 @@
 .pho-album-shared
     position          absolute
     top               10.9375rem
-    right             .625rem
+    right             .175rem
 
 +tiny-screen()
     .pho-album
